<resources>
    <string name="app_name">AgendaBBDD</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="fechaNaci">Fecha de Nacimiento</string>
    <string name="localidad">Localidad</string>
    <string name="calle">Calle</string>
    <string name="numero">Numero</string>
    <string name="addContac">Añadir Contacto</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="deleteID">Escribe el id del contacto que borrara</string>
    <string name="deletecontacto">Eliminar contacto elegido</string>
    <string name="editar">editar contacto</string>
    <string name="insertaid">Escribe el ID del contacto que deseas modificar</string>
    <string name="idet">Escribre el id (1,2,3...)</string>
    <string name="startUp">Modificar el contacto</string>
</resources>